--- a/nodebackend/package.json
+++ b/nodebackend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "backend",
+  "name": "nodebackend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js"
