--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
+    "gsap": "^3.12.2",
     "lucide-react": "^0.523.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "three": "^0.178.0",
     "zustand": "^5.0.5"
@@ -28,10 +34,14 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.25.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^6.3.5"
   }
 }
