--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -12,5 +12,9 @@
   "type": "commonjs",
   "devDependencies": {
     "truffle": "^5.11.5"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0",
+    "@truffle/hdwallet-provider": "^2.1.15"
   }
 }
